2011-06-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Warnings about primary/prefix mismatch fixed and extended.
	* automake.in (%standard_prefix): Add `doc' and `locale'.
	Rename `pkgdatadir' to `pkgdata'.  Similarly for`pkglibdir',
	`pkgincludedir' and `pkglibexecdir'.
	(handle_programs): List `pkglibexec', not `pkglib', among the
	prefixes valid for the `PROGRAMS' primary.
	(handle_data): List also `doc' among the prefixes valid for
	the `DATA' primary.  This is required by automake's own build
	system.
	* tests/dirforbid.test: Test removed, superseded by ...
	* tests/primary-prefix-invalid-couples.test: ... this new test.
	* tests/primary-prefix-valid-couples.test: New test.
	* tests/primary-prefix-couples-documented-valid.test: Likewise.
	* tests/primary-prefix-couples-force-valid.test: Likewise.
	* tests/java3.test: Adjusted, and extended a bit.
	* tests/Makefile.am (TESTS): Updated.
	* NEWS: Updated.
	From a report by Eric Blake.

2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: new function 'fatal_', for hard errors
	Before this patch, the only way offered by tests/defs to
	properly signal a hard error was the `framework_failure_'
	function.  But the error message issued by that function,
	as its name would suggest, refers to a set-up failure in the
	testsuite, while hard errors can obviously also be due to
	other reasons.  The best way to fix this inconsistency is to
	introduce a new function with a more general error message.
	Inspired by a recent similar change to Gnulib's tests/init.sh.
	* tests/defs.in (fatal_): New function.
	* tests/README (Section "Writing test cases" subsection "Do"):
	Suggest the use of `fatal_', not of `framework_failure_', for
	generic hard errors.  The latter should be reserved for "real"
	set-up failures.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix some failures, extend some checks
	* Makefile.am (sc_diff_automake_in_automake): Update, as we