@@ -1,3 +1,14 @@
+2011-06-13  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: optimize tests on primary/prefix mismatch for speed
+	* tests/primary-prefix-invalid-couples.test: Partial rewrite, in
+	order to use just a single automake invocation rather than one
+	invocation for each invalid primary/prefix couple.  This improves
+	the test script execution time by an order of magnitude.
+	Since we are at it, throw in some other improvements to avoid
+	unrelated automake warnings and failures that could potentially
+	cause false positives w.r.t. the automake exit status.
+
 2011-06-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Warnings about primary/prefix mismatch fixed and extended.
